@@ -1,7 +1,13 @@
-import dev.Roach.DealsFetcher;
+package fetchers;
+
+import dev.Roach.datamodel.deal.DealAllListPojo;
+import dev.Roach.fetchers.DealsFetcher;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -14,54 +20,64 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 
 
 @ExtendWith(MockitoExtension.class)
 public class DealsFetcherTest {
 
-    private final HttpClient mockClient = Mockito.mock(HttpClient.class);
-    private final DealsFetcher mockitoDealsFetcher = new DealsFetcher(mockClient);
+    @Mock
+    private HttpClient mockClient;
+
+    @InjectMocks
+    private DealsFetcher dealsFetcher;
+
+    @BeforeEach
+    public void setUp() {
+        dealsFetcher = new DealsFetcher();
+        dealsFetcher.setClient(mockClient);
+    }
 
     @Test
     public void getAllDealsReturnCorrectPages() throws IOException, InterruptedException {
 
         HttpResponse<String> initialMockResponse = Mockito.mock(HttpResponse.class);
-
         HttpResponse<String> firstMockResponse = Mockito.mock(HttpResponse.class);
         HttpResponse<String> secondMockResponse = Mockito.mock(HttpResponse.class);
         HttpResponse<String> thirdMockResponse = Mockito.mock(HttpResponse.class);
 
         HttpHeaders mockHeaders = Mockito.mock(HttpHeaders.class);
-        Mockito.when(mockHeaders.firstValue("X-Total-Page-Count"))
+        when(mockHeaders.firstValue("X-Total-Page-Count"))
                 .thenReturn(Optional.of("3"));
 
-        Mockito.when(initialMockResponse.headers()).thenReturn(mockHeaders);
+        when(initialMockResponse.headers()).thenReturn(mockHeaders);
 
-        Mockito.when(firstMockResponse.body()).thenReturn("First page content");
-        Mockito.when(secondMockResponse.body()).thenReturn("Second page content");
-        Mockito.when(thirdMockResponse.body()).thenReturn("Third page content");
+        when(firstMockResponse.body()).thenReturn("[{\"title\":\"Deal 1\"}]");
+        when(secondMockResponse.body()).thenReturn("[{\"metacriticLink\":\"meta\"}]");
+        when(thirdMockResponse.body()).thenReturn("[{\"savings\":\"30.3\"}]");
 
-        Mockito.when(mockClient.send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
+        when(mockClient.send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
                 .thenReturn(initialMockResponse)
                 .thenReturn(firstMockResponse)
                 .thenReturn(secondMockResponse)
                 .thenReturn(thirdMockResponse);
 
-        List<String> allDeals = mockitoDealsFetcher.getAllDeals();
+        List<DealAllListPojo> allDeals = dealsFetcher.getAllDeals();
 
         Assertions.assertEquals(3, allDeals.size());
-        Assertions.assertEquals("First page content", allDeals.get(0));
-        Assertions.assertEquals("Second page content", allDeals.get(1));
-        Assertions.assertEquals("Third page content", allDeals.get(2));
+
+        Assertions.assertEquals("Deal 1", allDeals.get(0).getDeals().getFirst().getTitle());
+        Assertions.assertEquals("meta", allDeals.get(1).getDeals().getFirst().getMetacriticLink());
+        Assertions.assertEquals(30.3, allDeals.get(2).getDeals().getFirst().getSavings());
     }
 
     @Test
     public void getAllDealsShouldHandleInterruptedException() throws IOException, InterruptedException {
 
-        Mockito.when(mockClient.send(any(HttpRequest.class),
+        when(mockClient.send(any(HttpRequest.class),
                 any(HttpResponse.BodyHandler.class))).thenThrow(InterruptedException.class);
 
-        List<String> allDeals = mockitoDealsFetcher.getAllDeals();
+        List<DealAllListPojo> allDeals = dealsFetcher.getAllDeals();
 
         Assertions.assertTrue(allDeals.isEmpty());
     }
@@ -69,10 +85,10 @@ public class DealsFetcherTest {
     @Test
     public void getAllDealsShouldHandleIOException() throws IOException, InterruptedException {
 
-        Mockito.when(mockClient.send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
+        when(mockClient.send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
                 .thenThrow(IOException.class);
 
-        List<String> allDeals = mockitoDealsFetcher.getAllDeals();
+        List<DealAllListPojo> allDeals = dealsFetcher.getAllDeals();
 
         Assertions.assertTrue(allDeals.isEmpty());
     }
@@ -82,20 +98,18 @@ public class DealsFetcherTest {
 
         HttpResponse<String> mockResponse = Mockito.mock(HttpResponse.class);
 
-        Mockito.when(mockResponse.body()).thenReturn("[]");
-        Mockito.when(mockClient.send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
+        when(mockResponse.body()).thenReturn("[]");
+        when(mockClient.send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
                 .thenReturn(mockResponse);
 
         String testId = "invalidID";
-        String actualResponse = mockitoDealsFetcher.getDealUsingID(testId);
+        String actualResponse = dealsFetcher.getDealUsingID(testId);
 
         Assertions.assertEquals("[]", actualResponse);
     }
 
     @Test
     public void getDealUsingIDShouldReturnExpectedResponseWhenIdIsNull() {
-
-        DealsFetcher dealsFetcher = new DealsFetcher(null);
 
         String actualResponse = dealsFetcher.getDealUsingID(null);
 
@@ -110,12 +124,12 @@ public class DealsFetcherTest {
         String expectedResponse = "Information about deal";
         String testId = "44677";
 
-        Mockito.when(mockResponse.body()).thenReturn(expectedResponse);
+        when(mockResponse.body()).thenReturn(expectedResponse);
 
-        Mockito.when(mockClient.send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
+        when(mockClient.send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
                 .thenReturn(mockResponse);
 
-        String actualResponse = mockitoDealsFetcher.getDealUsingID(testId);
+        String actualResponse = dealsFetcher.getDealUsingID(testId);
 
         Assertions.assertEquals(expectedResponse, actualResponse);
     }
